--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,12 @@ html, body, div, span,h2, h3, h4, h5, h6, p, blockquote,a,address,img,ul, li,foo
 
 ul li{
     float: left;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    display: block;
 }
 
 body{
@@ -98,19 +104,14 @@ nav ul{
     overflow: hidden;
 }
 
-nav ul li {
-    list-style: none;
-}
 nav ul li a{
     font-size:12px;
     padding-right: 16px;
-    text-decoration: none;
     color: white;
     font-weight: 600;
-    display: block;
 }
 
-ul li:last-child a{
+nav ul li:last-child a{
     padding-right: 0px;
 }
 
@@ -137,7 +138,6 @@ ul li:last-child a{
 }
 
 .social_media li{
-    list-style: none;
     padding-top:10px;
 }
 
@@ -145,7 +145,7 @@ ul li:last-child a{
     padding-right:6px;
 }
 
-.social_media li:last-child > a{
+.social_media li:last-child a{
     padding-right: 0;
 }
 
@@ -158,9 +158,10 @@ section{
 }
 
 .left_section{
-    padding: 30px 60px 30px 30px;
+    padding: 30px 60px 7px 30px;
     background: white;
     width: 623px;
+    float: left;
 }
 
 article{
@@ -171,7 +172,8 @@ article img{
     float: left;
     border: 4px solid #e9e9e9;
     outline: 1px solid #f3f3f3;
-    box-shadow: 0 0 0 1px #e5e5e5;
+    box-shadow: 0 0 0 2px #e2e2e2;
+    -webkit-box-shadow:0 0 0 2px #e2e2e2;
     margin-right: 32px;
 }
 
@@ -192,6 +194,7 @@ article p{
     font-size: 13px;
     color: #303030;
     line-height: 20px;
+    margin-bottom: 17px;
 }
 
 article button{
@@ -206,11 +209,173 @@ article button{
 }
 
 article button a{
-    text-decoration: none;
     color: #e2e1e1;
     font-family: "HelveticaNeue";
     font-weight: lighter;
     font-size: 11px;
-    display: block;
     padding: 5px 45px;
+}
+
+hr{
+    margin: 33px 0 34px 0;
+   background: #f9f7f7; /* Old browsers */
+background: -moz-linear-gradient(left, #f9f7f7 0%, #d9d6d6 50%, #f7f4f4 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left, #f9f7f7 0%,#d9d6d6 50%,#f7f4f4 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, #f9f7f7 0%,#d9d6d6 50%,#f7f4f4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f7f7', endColorstr='#f7f4f4',GradientType=1 );
+    border: none;
+    height: 1px;
+}
+
+.page_nav{
+    margin-top: 4px;
+}
+
+.page_nav li p, .page_nav li a{
+    background: #eeeeee;
+    font-size: 11px;
+    color: #a19ab6;
+    padding: 5px 8px;
+     color: #a19ab6;
+}
+
+.page_nav li a{
+    display: block;
+    text-decoration: none;
+   
+}
+
+.page_nav li a:hover{
+    background: #c1c1c1;
+    color: white;
+}
+
+.page_nav li a img{
+    width: 5px;
+    height: 4px;
+}
+
+.page_nav li:active a {
+    background: #c1c1c1;
+    color: white;
+}
+
+.page_nav li{
+    margin: 4px 2px 0px 2px;
+}
+
+/*------------End of left Section--------------*/
+
+/*------------Starting Right Section--------------*/
+.right_section {
+    background: #e7e7e7; /* Old browsers */
+    background: -moz-linear-gradient(top, #e7e7e7 0%, #fefefe 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #e7e7e7 0%,#fefefe 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #e7e7e7 0%,#fefefe 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e7e7e7', endColorstr='#fefefe',GradientType=0 );
+    float: right;
+    padding: 30px 34px 20px 20px;
+}
+
+.right_section ul li{
+    float: none;
+}
+
+.right_section h2{
+    margin-bottom: 21px;
+    font-size: 25px;
+}
+
+.right_section p, .right_section a, .right_section li{
+    font-size: 13px;
+    line-height: 20px;
+    font-family: "Georgia";
+    
+}
+
+.right_section a{
+    color: #2c83b0;
+}
+
+.topic_2 a{
+    margin-top: 20px;
+}
+
+.topic_1,.topic_2,.topic_3{
+    margin-bottom: 35px;
+}
+
+.topic_3{
+    margin-top: -5px;
+    padding-bottom:78px;
+}
+
+.topic_3 h5{
+    margin-bottom: 21px;
+}
+
+/*End of Section*/
+
+/*Starting Sponsors*/
+
+.sponsers{
+    background: white;
+    padding: 33px 20px 21px 32px;
+}
+
+.sponsers h2{
+    font-size: 25px;
+    margin-bottom: 23px;
+}
+
+.sponsers ul li img{
+   
+}
+
+.sponsers ul li{
+    width: 128px;
+    height: 76px;
+    border: 4px solid #e9e9e9;
+    outline: 1px solid #f3f3f3;
+    box-shadow: 0 0 0 2px #e2e2e2;
+    -webkit-box-shadow:0 0 0 2px #e2e2e2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 15px 15px 0;
+    
+}
+
+/*End of Sponsors*/
+
+footer{
+    background: #0f0f0f; /* Old browsers */
+    background: -moz-linear-gradient(top, #0f0f0f 0%, #0d0d0d 86%, #090909 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #0f0f0f 0%,#0d0d0d 86%,#090909 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #0f0f0f 0%,#0d0d0d 86%,#090909 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f0f0f', endColorstr='#090909',GradientType=0 );
+    padding: 10px 20px 30px 30px;
+    
+}
+
+footer h2{
+    color: white;
+    font-size: 25px;
+}
+
+footer .left_part{
+    float: left;
+}
+
+footer .middle_part{
+    float: left;
+    padding: 0 20px;
+}
+
+footer .right_part{
+    float: right;
+}
+
+.right_part,.left_part,.middle_part{
+    width: 290px;
 }
