--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,10 +7,13 @@ html, body, div, span,h2, h3, h4, h5, h6, p, blockquote,a,address,img,ul, li,foo
 	vertical-align: baseline;
 }
 
-ul li{
-    float: left;
-    list-style: none;
+ul{
+    li{
+        float: left;
+        list-style: none;
+    }
 }
+
 
 a{
     text-decoration: none;
@@ -34,10 +37,10 @@ header{
     padding: 18px 21px 25px 33px;
     
     background: #111213; /* Old browsers */
-background: -moz-linear-gradient(left, #111213 0%, #111213 49%, #28292a 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, #111213 0%,#111213 49%,#28292a 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, #111213 0%,#111213 49%,#28292a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111213', endColorstr='#28292a',GradientType=1 );
+    background: -moz-linear-gradient(left, #111213 0%, #111213 49%, #28292a 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #111213 0%,#111213 49%,#28292a 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #111213 0%,#111213 49%,#28292a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111213', endColorstr='#28292a',GradientType=1 );
     
 }
 
@@ -45,17 +48,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111213', end
     float:left;
     padding-top: 14px;
     
+    a {
+       img{
+            display: block; 
+        }
+    }
 }
 
-.logo a img{
-    display: block;
-}
 
 .input{
     float: right;
     background: url("img/search_icon.png") 0 100px no-repeat;
     position: relative;
-   
+    
+    img{
+        position: absolute;
+        
+    }
 }
 
 input{
@@ -70,6 +79,8 @@ input{
     font-size: 10px;
     color: grey;
     
+    
+    
 }
 
 input::-webkit-input-placeholder{
@@ -80,10 +91,6 @@ input:-moz-input-placeholder{
 }
 input:ms-input-placeholder{
     font-size: 10px;
-}
-
-.input img{
-    position: absolute;    
 }
 
 .search_icon{
@@ -103,22 +110,27 @@ input:ms-input-placeholder{
 nav{
     float: right;
     margin-top: 32px;
+    
+    ul{
+        overflow: hidden;
+        
+        li{
+            a{
+                font-size:12px;
+                padding-right: 14px;
+                color: white;
+                font-weight: 600;
+                
+            }
+            &:last-child {
+                a{
+                    padding-right: 0px;
+                }
+            }
+        }
+    }
 }
 
-nav ul{
-    overflow: hidden;
-}
-
-nav ul li a{
-    font-size:12px;
-    padding-right: 14px;
-    color: white;
-    font-weight: 600;
-}
-
-nav ul li:last-child a{
-    padding-right: 0px;
-}
 
 /*Start of banner*/
 
@@ -128,32 +140,36 @@ nav ul li:last-child a{
 .bnr_title{
     background: #111213;
     padding:34px 20px 43px 30px;
-}
-
-.bnr_title p{
-    font-size: 30px;
-    color: #a3a3a3;
-    width: 595px;
-    padding-right:25px;
-    float: left;
-    line-height: 38px;
+    
+    p{
+        font-size: 30px;
+        color: #a3a3a3;
+        width: 595px;
+        padding-right:25px;
+        float: left;
+        line-height: 38px;
+    }
+    
 }
 
 .social_media{
     float: right;
-}
-
-.social_media li{
+    
+    li{
     padding-top:10px;
+    
+        a{
+            padding-right:6px;
+        }
+
+        &:list-child{
+            a{
+                padding-right: 0;
+            } 
+        } 
+    }
 }
 
-.social_media li a{
-    padding-right:6px;
-}
-
-.social_media li:last-child a{
-    padding-right: 0;
-}
 
 /*End of Banner*/
 
@@ -172,28 +188,28 @@ section{
 
 article{
     
-}
-
-article img{
-    float: left;
-    border: 4px solid #e9e9e9;
-    outline: 1px solid #f3f3f3;
-    box-shadow: 0 0 0 2px #e2e2e2;
-    -webkit-box-shadow:0 0 0 2px #e2e2e2;
-    margin-right: 32px;
-}
-
-article h2{
+    img{
+        float: left;
+        border: 4px solid #e9e9e9;
+        outline: 1px solid #f3f3f3;
+        box-shadow: 0 0 0 2px #e2e2e2;
+        -webkit-box-shadow:0 0 0 2px #e2e2e2;
+        margin-right: 32px;
+    }
+    
+    h2{
     font-size: 25px;
     color: #303030;
+    
+        span{
+            font-size: 10px;
+            color: #2c83b0;
+            display: block;
+            margin-bottom: 10px;
+        }
+    }
 }
 
-article h2 span{
-    font-size: 10px;
-    color: #2c83b0;
-    display: block;
-    margin-bottom: 10px;
-}
 
 article p{
     font-family: "Georgia";
@@ -206,69 +222,71 @@ article p{
 article button{
     background: #5aa6cd; /* Old browsers */
     background: -moz-linear-gradient(top, #5aa6cd 0%, #45809e 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #5aa6cd 0%,#45809e 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #5aa6cd 0%,#45809e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5aa6cd', endColorstr='#45809e',GradientType=0 );
+    background: -webkit-linear-gradient(top, #5aa6cd 0%,#45809e 100%); /* Chrome10-         25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #5aa6cd 0%,#45809e 100%); /* W3C, IE10+,         FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5aa6cd',             endColorstr='#45809e',GradientType=0 );
     border: none;
     box-shadow: 0px 1px 0px #232323;
     border-radius: 2px;
+    
+    a{
+        color: #e2e1e1;
+        font-family: "HelveticaNeue";
+        font-weight: lighter;
+        font-size: 11px;
+        padding: 6px 46px;    
+    }
 }
 
-article button a{
-    color: #e2e1e1;
-    font-family: "HelveticaNeue";
-    font-weight: lighter;
-    font-size: 11px;
-    padding: 6px 46px;
-}
 
 hr{
     margin: 32px 0 33px 0;
    background: #f9f7f7; /* Old browsers */
-background: -moz-linear-gradient(left, #f9f7f7 0%, #d9d6d6 50%, #f7f4f4 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, #f9f7f7 0%,#d9d6d6 50%,#f7f4f4 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, #f9f7f7 0%,#d9d6d6 50%,#f7f4f4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f7f7', endColorstr='#f7f4f4',GradientType=1 );
+    background: -moz-linear-gradient(left, #f9f7f7 0%, #d9d6d6 50%, #f7f4f4 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #f9f7f7 0%,#d9d6d6 50%,#f7f4f4 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #f9f7f7 0%,#d9d6d6 50%,#f7f4f4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f7f7', endColorstr='#f7f4f4',GradientType=1 );
     border: none;
     height: 1px;
 }
 
 .page_nav{
     margin-top: 4px;
-}
-
-.page_nav li p, .page_nav li a{
-    background: #eeeeee;
-    font-size: 11px;
-    color: #a19ab6;
-    padding: 5px 8px;
-     color: #a19ab6;
-}
-
-.page_nav li a{
-    display: block;
-    text-decoration: none;
-   
-}
-
-.page_nav li a:hover{
-    background: #c1c1c1;
-    color: white;
-}
-
-.page_nav li a img{
-    width: 5px;
-    height: 4px;
-}
-
-.page_nav li:active a {
-    background: #c1c1c1;
-    color: white;
-}
-
-.page_nav li{
+    
+    li{
     margin: 6px 2px 0px 2px;
+        p,a{
+           background: #eeeeee;
+            font-size: 11px;
+            color: #a19ab6;
+            padding: 5px 8px;
+            color: #a19ab6; 
+            }
+        a{
+        display: block;
+        text-decoration: none;
+
+        &:hover{
+            background: #c1c1c1;
+            color: white;
+        }
+            img{
+                width: 5px;
+                height: 4px;
+            }
+
+        }
+        
+        &:active{
+            a{
+              background: #c1c1c1;
+                color: white;  
+            }
+        }
+    }
 }
+
+
 
 /*------------End of left Section--------------*/
 
@@ -281,29 +299,31 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f7f7', end
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e7e7e7', endColorstr='#fefefe',GradientType=0 );
     float: right;
     padding: 30px 34px 14px 20px;
-}
-
-.right_section ul li{
-    float: none;
-}
-
-.right_section h2{
-    margin-bottom: 21px;
-    font-size: 25px;
-    color: #303030;
-}
-
-.right_section p, .right_section a, .right_section li{
-    font-size: 13px;
-    line-height: 20px;
-    font-family: "Georgia";
-    color: #303030;
     
+    h2{
+        margin-bottom: 21px;
+        font-size: 25px;
+        color: #303030;
+    }
+    
+    ul{
+        li{
+            float: none;
+        }
+    }
+    
+    p, a, li{
+        font-size: 13px;
+        line-height: 20px;
+        font-family: "Georgia";
+        color: #303030;
+    }
+    
+    a{
+        color: #2c83b0;
+    }
 }
 
-.right_section a{
-    color: #2c83b0;
-}
 
 .topic_2 a{
     margin-top: 20px;
@@ -316,11 +336,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f7f7', end
 .topic_3{
     margin-top: -5px;
     padding-bottom:84px;
+    
+    h5{
+       margin-bottom: 21px; 
+    }
 }
 
-.topic_3 h5{
-    margin-bottom: 21px;
-}
 
 /*End of Section*/
 
@@ -329,120 +350,117 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f7f7', end
 .sponsers{
     background: white;
     padding: 33px 20px 21px 32px;
-}
-
-.sponsers h2{
-    font-size: 25px;
-    margin-bottom: 23px;
-}
-
-.sponsers ul li img{
-   
-}
-
-.sponsers ul li{
-    width: 128px;
-    height: 76px;
-    border-right: 4px solid #e9e9e9;
-    border-left: 4px solid #e9e9e9;
-    border-top: 3px solid #e9e9e9;
-    border-bottom: 3px solid #e9e9e9;
-    outline: 1px solid #f3f3f3;
-    box-shadow: 0 0 0 2px #e2e2e2;
-    -webkit-box-shadow:0 0 0 2px #e2e2e2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 15px 15px 0;
     
+    h2{
+        font-size: 25px;
+        margin-bottom: 23px;
+    }
+    
+    li{
+        width: 128px;
+        height: 76px;
+        border-right: 4px solid #e9e9e9;
+        border-left: 4px solid #e9e9e9;
+        border-top: 3px solid #e9e9e9;
+        border-bottom: 3px solid #e9e9e9;
+        outline: 1px solid #f3f3f3;
+        box-shadow: 0 0 0 2px #e2e2e2;
+        -webkit-box-shadow:0 0 0 2px #e2e2e2;
+        -moz--box-shadow:0 0 0 2px #e2e2e2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 15px 15px 0;
+    }
 }
+
 
 /*End of Sponsors*/
 
 footer{
     background: #111213; /* Old browsers */
-background: -moz-linear-gradient(top, #111213 0%, #111213 83%, #0f0f0f 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #111213 0%,#111213 83%,#0f0f0f 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #111213 0%,#111213 83%,#0f0f0f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111213', endColorstr='#0f0f0f',GradientType=0 );
+    background: -moz-linear-gradient(top, #111213 0%, #111213 83%, #0f0f0f 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #111213 0%,#111213 83%,#0f0f0f 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #111213 0%,#111213 83%,#0f0f0f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111213', endColorstr='#0f0f0f',GradientType=0 );
     padding: 18px 20px 38px 29px;
     margin-bottom: 20px;
     box-shadow:inset 0px -1px 30px #000000;
     -webkit-box-shadow:inset 0px -1px 30px #000000;
     -moz-box-shadow:inset 0px -1px 30px #000000;
-}
-
-footer h2{
-    color: white;
-    font-size: 25px;
-    margin-bottom: 10px;
-}
-
-footer .left_part{
-    float: left;
-}
-
-footer .middle_part{
-    float: left;
-    padding:0px 45px 0px 57px;
-    width: 242px;
-}
-
-footer .right_part{
-    float: right;
-    padding-right: 6px;
-}
-
-.left_part p, .left_part blockquote{
-    margin-bottom: 20px;
+    
+    h2{
+        color: white;
+        font-size: 25px;
+        margin-bottom: 10px; 
+    }
+    
+    p, address, address a, blockquote{
+        color: #6f6e6e;
+        font-size: 13px;
+        line-height: 20px;
+        font-family: "Georgia";
+    }
+    
+    blockquote{
+        color: #a3a3a3
+    }
+    
+    h4{
+        color: #a3a3a3
+    }
 }
 
 .left_part{
+    float: left;
     width: 278px;
-}
-
-.middle_part ul{
-    margin-top: 16px;
-    overflow: hidden;
-}
-
-.middle_part ul li img{
-    border: 1px solid #333333;
-    display: block;
-
-}
-
-.middle_part li{
-    padding-right: 5px;
-    padding-bottom: 10px;
-}
-
-.middle_part li:nth-child(3n){
-    padding-right: 0px;
-}
-
-footer p,footer address, footer address a,footer blockquote{
-    color: #6f6e6e;
-    font-size: 13px;
-    line-height: 20px;
-    font-family: "Georgia";
-}
-
-footer blockquote, footer h4{
-    color: #a3a3a3;
-
-}
-
-.right_part address a{
-    display: inline;
-}
-
-.right_part ul{
-    float: none;
-    margin-top: 20px;
     
+    p, blockquote{
+        margin-bottom: 20px;
+    }
 }
 
-.right_part h4{
-    margin-bottom: 9px;
+.middle_part{
+    float: left;
+    padding:0px 45px 0px 57px;
+    width: 242px;
+    
+    ul{
+        margin-top: 16px;
+        overflow: hidden;
+        
+        li{
+            padding-right: 5px;
+            padding-bottom: 10px;
+            
+            &:nth-child(3n){
+                padding-right: 0px;   
+            }
+            
+            img{
+                border: 1px solid #333333;
+                display: block;
+            }
+        }
+    }
+}
+
+.right_part{
+    float: right;
+    padding-right: 6px;
+    
+    h4{
+       margin-bottom: 9px; 
+    }
+    
+    ul{
+        float: none;
+        margin-top: 20px;
+    }
+    
+    address{
+        a{
+            display: inline;
+        }
+    }
 }
