--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,4 @@
-html, body, div, span,h2, h3, h4, h5, h6, p, blockquote,a,address,img,ul, li,footer, header,nav, section,input,button{
+html, body, div, span,h1,h2, h3, h4, h5, h6, p, blockquote,a,address,img,ul, li,footer, header,nav, section,input,figure,button{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -20,10 +20,13 @@ a{
     display: block;
 }
 
+a:hover {
+    text-shadow: 0px 0px 9px #5aa6cd;
+}
+
 body{
     background-color: #012f5a;
     font-family: "Garamond";
-
 }
 
 #wrapper{
@@ -33,7 +36,7 @@ body{
     box-shadow: -5px 5px 100px #fff;
 }
 
-header{
+.masthead{
     padding: 18px 21px 25px 33px;
     
     background: #111213; /* Old browsers */
@@ -41,61 +44,82 @@ header{
     background: -webkit-linear-gradient(left, #111213 0%,#111213 49%,#28292a 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right, #111213 0%,#111213 49%,#28292a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111213', endColorstr='#28292a',GradientType=1 );
-    
 }
 
 .logo{
     float:left;
-    padding-top: 14px;
+    padding-top: 6px;
     
     a {
        img{
             display: block; 
         }
     }
+    
+    &:hover{
+        text-shadow: none;
+    }
+    h1{
+        color: #636363;
+        font-size: 39.5px;
+        font-weight: lighter;
+        word-spacing: -8px;
+        
+        span{
+            color: #fff;
+        }
+    }
+    ul{
+        margin-left: 3px;
+        
+        li{
+            color: #bebebe;
+            word-spacing: 0px;
+            font-size: 18px;
+            letter-spacing: 3px;
+            margin-right: 12px;
+            margin-top: -4px;
+        }
+    }
 }
 
-
-.input{
+.search{
     float: right;
     background: url("img/search_icon.png") 0 100px no-repeat;
     position: relative;
     
     img{
-        position: absolute;
-        
+        position: absolute;  
     }
 }
 
 input{
     border-radius: 12px;
-    padding-left: 30px;
-    width: 125px;
-    height: 12px;
+    padding: 3px 10px 3px 30px;
+    width: 83px;
     box-shadow: 1px 1px 10px #aaa9a9 inset;
-    padding-top: 10px;
-    padding-bottom: 8px;
     line-height: 12px;
     font-size: 10px;
-    color: grey;
-    
-    
-    
+    color: grey; 
+}
+
+.search input[type="text"]:focus {
+    outline: none;
 }
 
 input::-webkit-input-placeholder{
-    font-size: 10px;
+    font-size: 12px;
 }
 input:-moz-input-placeholder{
-    font-size: 10px;
+    font-size: 12px;
 }
 input:ms-input-placeholder{
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .search_icon{
     left: 5px;
-    top: 4px;
+    top: 5px;
 }
 
 .search_dropdrown{
@@ -107,9 +131,9 @@ input:ms-input-placeholder{
     clear: both;
 }
 
-nav{
+.navbar{
     float: right;
-    margin-top: 32px;
+    margin-top: 33px;
     
     ul{
         overflow: hidden;
@@ -119,8 +143,7 @@ nav{
                 font-size:12px;
                 padding-right: 14px;
                 color: white;
-                font-weight: 600;
-                
+                font-weight: 600;    
             }
             &:last-child {
                 a{
@@ -134,10 +157,11 @@ nav{
 
 /*Start of banner*/
 
-.bnr_img > img{
+.banner_img > img{
     display: block;
 }
-.bnr_title{
+
+.intro{
     background: #111213;
     padding:34px 20px 43px 30px;
     
@@ -148,8 +172,7 @@ nav{
         padding-right:25px;
         float: left;
         line-height: 38px;
-    }
-    
+    } 
 }
 
 .social_media{
@@ -170,23 +193,58 @@ nav{
     }
 }
 
+#slideshow { 
+    
+    position: relative; 
+    width: 960px; 
+    height: 360px;
+    
+    figcaption{
+        position: absolute; 
+        top: 320px; 
+        left: 0px; 
+        right: 0px;
+        height: 40px;
+        width: 100%;
+        opacity: 0.4;
+        background: black;
+        
+        p{
+            color: white;
+            font:14px "Georgia";
+            float: right;
+            margin-top: 15px;
+            margin-right: 20px;
+        }
+    }
+     
+}
+
+#slideshow .banner_img { 
+    position: absolute; 
+    top: 0px; 
+    left: 0px; 
+    right: 0px; 
+    bottom:0px; 
+}
+
 
 /*End of Banner*/
 
 /*Start of Section*/
 
-section{
+.content{
    background: white; 
 }
 
-.left_section{
+.primary-content{
     padding: 30px 60px 7px 30px;
     background: white;
     width: 623px;
     float: left;
 }
 
-article{
+.main-post{
     
     img{
         float: left;
@@ -211,7 +269,7 @@ article{
 }
 
 
-article p{
+.main-post p{
     font-family: "Georgia";
     font-size: 13px;
     color: #303030;
@@ -219,22 +277,32 @@ article p{
     margin-bottom: 17px;
 }
 
-article button{
-    background: #5aa6cd; /* Old browsers */
-    background: -moz-linear-gradient(top, #5aa6cd 0%, #45809e 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #5aa6cd 0%,#45809e 100%); /* Chrome10-         25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #5aa6cd 0%,#45809e 100%); /* W3C, IE10+,         FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5aa6cd',             endColorstr='#45809e',GradientType=0 );
-    border: none;
-    box-shadow: 0px 2px 0px #232323;
-    border-radius: 2px;
-    
-    a{
+   
+.main-post a{
+        display: block;
+        float: left;
+        border: none;
+        box-shadow: 0px 1px 0px #232323;
+        border-radius: 2px;
         color: #e2e1e1;
-        font:lighter 11px "HelveticaNeue";
-        padding: 6px 46px;    
-    }
+        font:lighter 11px "Helvetica";
+        padding: 6px 46px;
+        text-shadow: 1px -1px #444;
+        background: #5aa6cd; /* Old browsers */
+        background: -moz-linear-gradient(top, #5aa6cd 0%, #45809e 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #5aa6cd 0%,#45809e 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #5aa6cd 0%,#45809e 100%); /* W3C, IE10+,FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5aa6cd',endColorstr='#45809e',GradientType=0 );
+       
+        &:hover{
+        background: #45809e; /* Old browsers */
+        bacground: -moz-linear-gradient(top, #45809e 0%, #5aa6cd 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #45809e 0%,#5aa6cd 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #45809e 0%,#5aa6cd 100%); /* W3C, IE10+,FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45809e',endColorstr='#5aa6cd',GradientType=0 );
+        }
 }
+
 
 
 hr{
@@ -248,13 +316,13 @@ hr{
     height: 1px;
 }
 
-.page_nav{
+.pagination{
     margin-top: 4px;
     
     li{
     margin: 6px 2px 0px 2px;
         p,a{
-           background: #eeeeee;
+            background: #eeeeee;
             font-size: 11px;
             color: #a19ab6;
             padding: 5px 8px;
@@ -272,7 +340,6 @@ hr{
                 width: 5px;
                 height: 4px;
             }
-
         }
         
         &:active{
@@ -285,11 +352,10 @@ hr{
 }
 
 
+/*------------End of Primary content--------------*/
 
-/*------------End of left Section--------------*/
-
-/*------------Starting Right Section--------------*/
-.right_section {
+/*------------Starting Secondary Section--------------*/
+.secondary-content {
     background: #e7e7e7; /* Old browsers */
     background: -moz-linear-gradient(top, #e7e7e7 0%, #fefefe 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #e7e7e7 0%,#fefefe 100%); /* Chrome10-25,Safari5.1-6 */
@@ -321,15 +387,15 @@ hr{
 }
 
 
-.topic_2 a{
+.post2 a{
     margin-top: 20px;
 }
 
-.topic_1,.topic_2,.topic_3{
+.post1,.post2,.post3{
     margin-bottom: 35px;
 }
 
-.topic_3{
+.post3{
     margin-top: -5px;
     padding-bottom:84px;
     
@@ -339,11 +405,11 @@ hr{
 }
 
 
-/*End of Section*/
+/*End of main*/
 
 /*Starting Sponsors*/
 
-.sponsers{
+.thumbnail-list{
     background: white;
     padding: 33px 20px 21px 32px;
     
@@ -369,7 +435,6 @@ hr{
         margin: 0 15px 15px 0;
     }
 }
-
 
 /*End of Sponsors*/
 
@@ -459,38 +524,4 @@ footer{
     }
 }
 
-#slideshow { 
-    
-    position: relative; 
-    width: 960px; 
-    height: 360px;
-    
-    figcaption{
-        position: absolute; 
-        top: 320px; 
-        left: 0px; 
-        right: 0px;
-        height: 40px;
-        width: 100%;
-        opacity: 0.4;
-        background: black;
-        
-        p{
-            color: white;
-            font:14px "Georgia";
-            float: right;
-            margin-top: 15px;
-            margin-right: 20px;
-        }
-    }
-     
-}
-
-#slideshow > div { 
-    position: absolute; 
-    top: 0px; 
-    left: 0px; 
-    right: 0px; 
-    bottom:0px; 
-}
 
